# langman

./: Cargo.toml  README.md
resources/: schema.sql  spanish_grammar.txt  spanish_grammar_rules.json
src/: db.rs  main.rs
